# LaCT

./: .gitignore
lact_nvs/: data.py  dit.py  generate_indices.py  generator.py  inference.py  lact_ttt.py  lact_ttt_orig.py  main.py  model.py  pyproject.toml  test_ops.py  train.py  transformer.py  vis_feature.py
lact_nvs/_lact_ttt/: __init__.py  baseline.py  ga.py  mse.py  no_query.py  only_w1.py  only_w1_no_wn.py  only_w1_straight_qk.py  only_w1_straight_qk_no_lr1.py  only_w1_straight_qk_no_lr1_no_muon.py  only_w1_straight_qk_no_lr1_no_wn.py  only_w1_straight_qk_no_lr1_no_wn_muon.py  only_w1_straight_qk_no_wn.py
lact_nvs/config/: lact_l12_d768_ttt1x.yaml  lact_l12_d768_ttt2x.yaml  lact_l18_d768_ttt2x.yaml  lact_l24_d768_ttt4x.yaml
lact_nvs/data_example/: test_indices_in32_tar32.json
lact_nvs/data_preprocess/: dl3dv_format_converter.py  dl3dv_format_converter_10k.py
lact_nvs/scripts_rl/: re10k_l12_d768_bs512_i2t6_baseline.sh  re10k_l12_d768_bs512_i2t6_baseline_ga_dot_product.sh  re10k_l12_d768_bs512_i2t6_baseline_mse.sh  re10k_l12_d768_bs512_i2t6_baseline_no_query_dot_product.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1_no_wn.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1_straight_qk.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1_straight_qk_no_lr1.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1_straight_qk_no_lr1_no_muon.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1_straight_qk_no_lr1_no_wn.sh  re10k_l12_d768_bs512_i2t6_baseline_only_w1_straight_qk_no_lr1_no_wn_muon.sh  (+1 more)
