[project]
name = "lact-nvs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub>=0.35.3",
    "imageio>=2.37.0",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "pillow>=11.3.0",
    "scikit-learn>=1.8.0",
    "timm>=1.0.21",
    "torch==2.8",
    "torchvision>=0.23.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
    "xformers>=0.0.32.post2",
]